fix(PaginationArea.js PaginationArea.styl): fixing next/prev button on safari
#670

--- a/src/components/studyList/PaginationArea.styl
+++ b/src/components/studyList/PaginationArea.styl
@@ -22,30 +22,27 @@
   .page-buttons
     margin: 0
     text-align: right
+    font-weight: normal
+    ul.pagination-control
+      margin: 0
 
-    label
-      font-weight: normal
+      li
+        display: table-cell
+        padding: 5px 2px
 
-      ul.pagination-control
-        margin: 0
+        button
+          padding: 4px 8px
+          background-color: var(--primary-background-color)
+          border-color: var(--ui-gray)
+          color: var(--ui-gray-darkest)
+          color: white
+          text-decoration: none
 
-        li
-          display: table-cell
-          padding: 5px 2px
+          &:hover:enabled
+            color: var(--active-color)
 
+        .active
           button
-            padding: 4px 8px
-            background-color: var(--primary-background-color)
-            border-color: var(--ui-gray)
-            color: var(--ui-gray-darkest)
+            background-color: var(--ui-gray)
+            border-color: #ddd
             color: white
-            text-decoration: none
-
-            &:hover:enabled
-              color: var(--active-color)
-
-          .active
-            button
-              background-color: var(--ui-gray)
-              border-color: #ddd
-              color: white
